Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14502

LBUG : lov_io.c:123:lov_io_sub_init()) ASSERTION( ergo(lov_is_flr(lov), is_index_within_mirror(lov, index, lio->lis_mirror_index)) ) failed: [0x200004ac1:0x18ec:0x0]iot = 5, index = 0, mirror = 1

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      <0>[607878.041762] LustreError: 49682:0:(lov_io.c:123:lov_io_sub_init()) ASSERTION( ergo(lov_is_flr(lov), is_index_within_mirror(lov, index, lio->lis_mirror_index)) ) failed: [0x200004ac1:0x18ec:0x0]iot = 5, index = 0, mirror = 1
      <0>[607878.043234] LustreError: 49682:0:(lov_io.c:123:lov_io_sub_init()) LBUG
      <6>[607878.043952] Pid: 49682, comm: bigstick-mpi-om 3.10.0-1160.11.1.el7.x86_64 #1 SMP Fri Dec 18 16:34:56 UTC 2020
      <6>[607878.044686] Call Trace:
      <4>[607878.045409]  [<ffffffffc08047cc>] libcfs_call_trace+0x8c/0xc0 [libcfs]
      <4>[607878.046150]  [<ffffffffc080487c>] lbug_with_loc+0x4c/0xa0 [libcfs]
      <4>[607878.046880]  [<ffffffffc0e99b71>] lov_sub_get+0x871/0x920 [lov]
      <4>[607878.047616]  [<ffffffffc0e9a4a2>] lov_io_fault_start+0x62/0x160 [lov]
      <4>[607878.048354]  [<ffffffffc0d05ed0>] cl_io_start+0x70/0x140 [obdclass]
      <4>[607878.049121]  [<ffffffffc0d082cf>] cl_io_loop+0x9f/0x200 [obdclass]
      <4>[607878.049879]  [<ffffffffc114ae5e>] ll_fault+0x41e/0x680 [lustre]
      <4>[607878.050607]  [<ffffffff8a1ee01a>] __do_fault.isra.61+0x8a/0x100
      <4>[607878.051324]  [<ffffffff8a1eeed4>] do_cow_fault+0xb4/0x320
      <4>[607878.052033]  [<ffffffff8a1f5eee>] handle_mm_fault+0xafe/0xfb0
      <4>[607878.052749]  [<ffffffff8a78e653>] __do_page_fault+0x213/0x500
      <4>[607878.053468]  [<ffffffff8a78e975>] do_page_fault+0x35/0x90
      <4>[607878.054183]  [<ffffffff8a78a778>] page_fault+0x28/0x30
      <4>[607878.054892]  [<ffffffffffffffff>] 0xffffffffffffffff
      <0>[607878.055617] Kernel panic - not syncing: LBUG

            bobijam Zhenyu Xu
            bobijam Zhenyu Xu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: